Changed icon's background color.

--- a/index.html
+++ b/index.html
@@ -140,35 +140,40 @@
 				</g>
 				<g id="facebook-icon" fill="currentColor" transform="translate(1.000000, 1.000000)">
 					<!--path d="M28,1 C29.654,1 31,2.346 31,4 L31,28 C31,29.654 29.654,31 28,31 L4,31 C2.346,31 1,29.654 1,28 L1,4 C1,2.346 2.346,1 4,1 L28,1 L28,1 Z M28,0 L4,0 C1.8,0 0,1.8 0,4 L0,28 C0,30.2 1.8,32 4,32 L28,32 C30.2,32 32,30.2 32,28 L32,4 C32,1.8 30.2,0 28,0 L28,0 Z" id="path1"></path-->
-					<rect id="Rectangle" x="0" y="0" width="32" height="32" fill="#FFF" stroke="currentColor" stroke-width="2"></rect>
+					<rect id="Rectangle" x="0" y="0" width="32" height="32" fill="transparent" stroke="currentColor" stroke-width="2"></rect>
 					<path d="M13.597,25.261 L17.424,25.261 L17.424,15.999 L19.977,15.999 L20.315,12.808 L17.424,12.808 L17.428,11.21 C17.428,10.378 17.507,9.932 18.701,9.932 L20.297,9.932 L20.297,6.739 L17.743,6.739 C14.676,6.739 13.597,8.288 13.597,10.891 L13.597,12.807 L11.685,12.807 L11.685,15.999 L13.597,15.999 L13.597,25.261 L13.597,25.261 Z" id="path2"></path>
 				</g>	
 				<g id="twitter-icon" fill="currentColor" transform="translate(1.000000, 1.000000)">
 					<!--path d="M28,1 C29.654,1 31,2.346 31,4 L31,28 C31,29.654 29.654,31 28,31 L4,31 C2.346,31 1,29.654 1,28 L1,4 C1,2.346 2.346,1 4,1 L28,1 L28,1 Z M28,0 L4,0 C1.8,0 0,1.8 0,4 L0,28 C0,30.2 1.8,32 4,32 L28,32 C30.2,32 32,30.2 32,28 L32,4 C32,1.8 30.2,0 28,0 L28,0 Z" id="path1"></path-->
-					<rect id="Rectangle" x="0" y="0" width="32" height="32" fill="#FFF" stroke="currentColor" stroke-width="2"></rect>
+					<rect id="Rectangle" x="0" y="0" width="32" height="32" fill="transparent" stroke="currentColor" stroke-width="2"></rect>
 					<path d="M18.328,8.56 C16.665,9.165 15.614,10.726 15.734,12.434 L15.774,13.093 L15.109,13.012 C12.688,12.703 10.572,11.654 8.776,9.891 L7.897,9.017 L7.671,9.663 C7.192,11.102 7.498,12.623 8.496,13.645 C9.028,14.21 8.908,14.291 7.991,13.954 C7.672,13.847 7.392,13.766 7.366,13.806 C7.273,13.901 7.592,15.124 7.845,15.609 C8.191,16.282 8.896,16.94 9.668,17.331 L10.32,17.64 L9.549,17.653 C8.804,17.653 8.778,17.666 8.858,17.95 C9.124,18.824 10.175,19.753 11.346,20.156 L12.171,20.438 L11.453,20.869 C10.389,21.489 9.138,21.838 7.887,21.864 C7.288,21.877 6.796,21.931 6.796,21.972 C6.796,22.106 8.42,22.859 9.364,23.156 C12.198,24.03 15.564,23.653 18.092,22.16 C19.888,21.097 21.684,18.985 22.523,16.94 C22.976,15.851 23.428,13.86 23.428,12.906 C23.428,12.287 23.468,12.206 24.213,11.467 C24.652,11.037 25.064,10.566 25.144,10.431 C25.277,10.175 25.263,10.175 24.585,10.404 C23.454,10.808 23.294,10.754 23.854,10.149 C24.266,9.719 24.759,8.938 24.759,8.71 C24.759,8.67 24.56,8.737 24.333,8.858 C24.094,8.993 23.562,9.195 23.162,9.315 L22.44,9.543 L21.788,9.099 C21.429,8.857 20.924,8.588 20.657,8.507 C19.978,8.318 18.94,8.345 18.328,8.56 Z" id="path2"></path>
 				</g>
 				<g id="instagram-icon" fill="currentColor" transform="translate(1.000000, 1.000000)">
 					<!--path d="M28,1 C29.654,1 31,2.346 31,4 L31,28 C31,29.654 29.654,31 28,31 L4,31 C2.346,31 1,29.654 1,28 L1,4 C1,2.346 2.346,1 4,1 L28,1 L28,1 Z M28,0 L4,0 C1.8,0 0,1.8 0,4 L0,28 C0,30.2 1.8,32 4,32 L28,32 C30.2,32 32,30.2 32,28 L32,4 C32,1.8 30.2,0 28,0 L28,0 Z" id="path1"></path-->
-					<rect id="Rectangle" x="0" y="0" width="32" height="32" fill="#FFF" stroke="currentColor" stroke-width="2"></rect>
+					<rect id="Rectangle" x="0" y="0" width="32" height="32" fill="transparent" stroke="currentColor" stroke-width="2"></rect>
 					<path d="M16,8.74054054 C11.4162162,8.74054054 7.74054054,12.4594595 7.74054054,17 C7.74054054,21.5405405 11.4162162,25.2594595 16,25.2594595 C20.5837838,25.2594595 24.2594595,21.5837838 24.2594595,17 C24.2594595,12.4162162 20.5837838,8.74054054 16,8.74054054 Z M16,22.0594595 C13.1891892,22.0594595 10.9405405,19.8108108 10.9405405,17 C10.9405405,14.1891892 13.1891892,11.9405405 16,11.9405405 C18.8108108,11.9405405 21.0594595,14.1891892 21.0594595,17 C21.0594595,19.8108108 18.8108108,22.0594595 16,22.0594595 Z" id="path2"></path>
 					<ellipse id="path3" cx="25.3027027" cy="6.78378378" rx="1.98918919" ry="1.98918919"></ellipse>
 				</g>
 				<g id="flickr-icon" fill="currentColor" transform="translate(1.000000, 1.000000)">
 					<!--path d="M28,1 C29.654,1 31,2.346 31,4 L31,28 C31,29.654 29.654,31 28,31 L4,31 C2.346,31 1,29.654 1,28 L1,4 C1,2.346 2.346,1 4,1 L28,1 L28,1 Z M28,0 L4,0 C1.8,0 0,1.8 0,4 L0,28 C0,30.2 1.8,32 4,32 L28,32 C30.2,32 32,30.2 32,28 L32,4 C32,1.8 30.2,0 28,0 L28,0 Z" id="path1"></path-->
-					<rect id="Rectangle" x="0" y="0" width="32" height="32" fill="#FFF" stroke="currentColor" stroke-width="2"></rect>
+					<rect id="Rectangle" x="0" y="0" width="32" height="32" fill="transparent" stroke="currentColor" stroke-width="2"></rect>
 					<circle id="path2" cx="10" cy="15.5" r="4.5"></circle>
 					<circle id="path3" cx="22" cy="15.5" r="4.5"></circle>
 				</g>
 				<g id="linkedin-icon" fill="currentColor" transform="translate(1.000000, 1.000000)">
 					<!--path d="M28,1 C29.654,1 31,2.346 31,4 L31,28 C31,29.654 29.654,31 28,31 L4,31 C2.346,31 1,29.654 1,28 L1,4 C1,2.346 2.346,1 4,1 L28,1 L28,1 Z M28,0 L4,0 C1.8,0 0,1.8 0,4 L0,28 C0,30.2 1.8,32 4,32 L28,32 C30.2,32 32,30.2 32,28 L32,4 C32,1.8 30.2,0 28,0 L28,0 Z" id="path1"></path-->
-					<rect id="Rectangle" x="0" y="0" width="32" height="32" fill="#FFF" stroke="currentColor" stroke-width="2"></rect>
+					<rect id="Rectangle" x="0" y="0" width="32" height="32" fill="transparent" stroke="currentColor" stroke-width="2"></rect>
 					<path d="M24,17.7851662 L24,23.3338758 L20.7844687,23.3338758 L20.7844687,18.1583353 C20.7844687,16.857475 20.3206231,15.9716345 19.1557777,15.9716345 C18.2664497,15.9716345 17.7398279,16.5680074 17.5061614,17.1469426 C17.4224599,17.3527087 17.398047,17.6421762 17.398047,17.9316438 L17.398047,23.3338758 L14.1825157,23.3338758 C14.1825157,23.3338758 14.2243664,14.569635 14.1825157,13.6628691 L17.398047,13.6628691 L17.398047,15.0334806 C17.3910718,15.0439433 17.3840967,15.054406 17.3771216,15.0648686 L17.398047,15.0648686 L17.398047,15.0334806 C17.827017,14.3743316 18.5873053,13.4361776 20.2962102,13.4361776 C22.4131597,13.4326901 24,14.8172518 24,17.7851662 Z M10.8205069,9 C9.71843757,9 9,9.72192513 9,10.6705417 C9,11.598233 9.69751221,12.3410835 10.7786561,12.3410835 L10.7995815,12.3410835 C11.9225761,12.3410835 12.6200884,11.598233 12.6200884,10.6705417 C12.5956754,9.72192513 11.9190886,9 10.8205069,9 Z M9.19181586,23.3338758 L12.4073471,23.3338758 L12.4073471,13.6628691 L9.19181586,13.6628691 L9.19181586,23.3338758 Z" id="path2"></path>
 				</g>
 				<g id="mail-icon" fill="currentColor" transform="translate(1.000000, 1.000000)">
 					<!--path d="M28,1 C29.654,1 31,2.346 31,4 L31,28 C31,29.654 29.654,31 28,31 L4,31 C2.346,31 1,29.654 1,28 L1,4 C1,2.346 2.346,1 4,1 L28,1 L28,1 Z M28,0 L4,0 C1.8,0 0,1.8 0,4 L0,28 C0,30.2 1.8,32 4,32 L28,32 C30.2,32 32,30.2 32,28 L32,4 C32,1.8 30.2,0 28,0 L28,0 Z" id="path1"></path-->
-					<rect id="Rectangle" x="0" y="0" width="32" height="32" fill="#FFF" stroke="currentColor" stroke-width="2"></rect>
+					<rect id="Rectangle" x="0" y="0" width="32" height="32" fill="transparent" stroke="currentColor" stroke-width="2"></rect>
 					<path d="M7.00999451,11.2761038 C7.00999451,10.1736854 7.90162548,9.27999878 9.00286698,9.27999878 L22.9971216,9.27999878 C24.0977546,9.27999878 24.989994,10.1820328 24.989994,11.2761038 L24.989994,20.7138941 C24.989994,21.8163124 24.0983631,22.7099991 22.9971216,22.7099991 L9.00286698,22.7099991 C7.90223391,22.7099991 7.00999451,21.8079651 7.00999451,20.7138941 L7.00999451,11.2761038 Z M22.759956,9.37999725 L9.30999756,9.37999725 C11.4902241,11.4228319 13.7619244,13.0074776 16.0284188,15.1299973 C18.3262835,13.0799185 22.7756411,9.40897363 22.759956,9.37999725 Z M22.639993,22.5899973 C22.6424351,22.5860438 16.14582,17.7334148 16.0135379,17.6299973 C15.6317857,17.943272 9.94685068,22.1409914 9.3999939,22.5899973 L22.639993,22.5899973 Z M16.0099878,17.5420437 C13.7670909,15.7501519 11.5802664,14.002179 9.29998779,12.1839358 L9.29998779,22.5839354 C11.5615755,20.8798814 13.7577455,19.2373139 16.0099878,17.5420437 Z M16.0099945,17.5420437 C18.275663,19.2373139 20.4849249,20.8798814 22.7599945,22.5839354 L22.7599945,12.1839358 C20.4661226,14.002179 18.2662619,15.7501519 16.0099945,17.5420437 Z" id="path2"></path>
+				</g>
+				<g id="website-icon" fill="currentColor" transform="translate(1.000000, 1.000000)">
+					<!--path d="M28,1 C29.654,1 31,2.346 31,4 L31,28 C31,29.654 29.654,31 28,31 L4,31 C2.346,31 1,29.654 1,28 L1,4 C1,2.346 2.346,1 4,1 L28,1 L28,1 Z M28,0 L4,0 C1.8,0 0,1.8 0,4 L0,28 C0,30.2 1.8,32 4,32 L28,32 C30.2,32 32,30.2 32,28 L32,4 C32,1.8 30.2,0 28,0 L28,0 Z" id="path1"></path-->
+					<rect id="Rectangle" x="0" y="0" width="32" height="32" fill="transparent" stroke="currentColor" stroke-width="2"></rect>
+            		<path d="M11.899199,13.5454545 L13.3874,19.5 L14.5878466,19.5 L15.9464917,14.1470588 L15.9651033,14.1470588 L17.295831,19.5 L18.4776661,19.5 L20.0632999,13.4454545 L21.5764936,19.5 L22.7769403,19.5 L24.1355853,14.1470588 L24.1541969,14.1470588 L25.4849246,19.5 L26.6667597,19.5 L28.5,12.5 L27.3181649,12.5 L26.0804951,17.8529412 L26.0618835,17.8529412 L24.7590731,12.5 L23.5679323,12.5 L22.2278988,17.8529412 L22.2092872,17.8529412 L21.0088405,12.5 L20.0689559,12.5 L19.1290713,12.5 L17.8914015,17.8529412 L17.8727899,17.8529412 L16.5699795,12.5 L15.3788386,12.5 L14.0388051,17.8529412 L14.0201936,17.8529412 L12.8197469,12.5 L11.9054532,12.5 L10.9911595,12.5 L9.75348967,17.8529412 L9.73487809,17.8529412 L8.43206775,12.5 L7.24092686,12.5 L5.90089336,17.8529412 L5.88228178,17.8529412 L4.6818351,12.5 L3.5,12.5 L5.24948818,19.5 L6.44993486,19.5 L7.80857994,14.1470588 L7.82719151,14.1470588 L9.15791923,19.5 L10.3397543,19.5 L11.899199,13.5454545 Z" id="Combined-Shape"></path>
 				</g>
 				<g id="leftarrow" fill="#000">
 					<path d="M13.92,27a1,1,0,0,1-.71-.29L0,13.5,13.21.29a1,1,0,0,1,1.41,1.41L2.83,13.5,14.62,25.3A1,1,0,0,1,13.92,27Z"/>
@@ -263,7 +268,7 @@
 										<div class="head-image" data-image-num="19" data-toggle="tooltip" data-placement="bottom" data-title="Francisco Silva" data-description="Marketing Hacker" data-mail="francisco" data-linkedin="francisco-mendes-silva-399884119" data-facebook="francisco.mendessilva"></div>		
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="18" data-toggle="tooltip" data-placement="bottom" data-title="Gil Belford" data-description="Curator & Public Relations" data-mail="gil" data-linkedin="gilbelford"></div>		
+										<div class="head-image" data-image-num="18" data-toggle="tooltip" data-placement="bottom" data-title="Gil Belford" data-description="Curator & Public Relations" data-mail="gil" data-linkedin="gilbelford" data-website="http://www.gilbelford.com"></div>		
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
 										<div class="head-image" data-image-num="17" data-toggle="tooltip" data-placement="bottom" data-title="Gonçalo Deus" data-description="Video & Media Designer" data-mail="goncalo" data-linkedin="goncalodeus"></div>		
@@ -335,6 +340,11 @@
 									<a href="https://www.facebook.com/tedxistalameda" target="_blank" style="margin: 0px 5px 0px 5px;">
 										<svg class="facebook-icon" height='30' width='30' viewBox="0 0 34 34">
 											<use xlink:href="#facebook-icon"></use>
+										</svg>
+									</a>
+									<a href="https://tedxistalameda.com" target="_blank" style="margin: 0px 5px 0px 5px;">
+										<svg class="website-icon" height='30' width='30' viewBox="0 0 34 34">
+											<use xlink:href="#website-icon"></use>
 										</svg>
 									</a>
 								</div>
@@ -1051,6 +1061,7 @@
 				this.checked ? n.style.visibility = "hidden" : n.style.visibility = "visible"
 				this.checked ? m.classList.add("blurred") : m.classList.remove("blurred");
 				$(".description-text").css('opacity', 0);
+				$(".description-text").css('visibility', 'hidden');
 			});
 			
 			// PAVELK2's social feed. Credits to the author. - see https://github.com/pavelk2/social-feed
