--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                         </div>
                         <!-- section start -->
 						<div class="item_section_speakers">
-                            <div class="row">    
+                            <!--<div class="row">    
                                 <div class="module">
                                     <img class="blurred_speaker" src="images/photos/AndreasMogensen.jpg"/>
                                 </div>
@@ -472,6 +472,81 @@
                                 <div class="module">
                                     <img class="blurred_speaker" src="images/photos/AndreasMogensen.jpg"/>
                                 </div>
+                            </div>-->
+                            <div class="flex_container">
+                                <div class="module">
+                                    <div class="flex_title">
+                                        <h2>Mike Wheeler</h2>
+                                    </div>
+                                    <div class="flex_child">
+                                        <img class="blurred_speaker" src="images/photos/speakers/AndreasMogensen.jpg"/>
+                                    </div>
+                                </div>
+                                <div class="module">
+                                    <div class="flex_title">
+                                        <h2>Hank Moody</h2>
+                                    </div>
+                                    <div class="flex_child">
+                                        <img class="blurred_speaker" src="images/photos/speakers/CarlosArturoTorres.jpg"/>
+                                    </div>
+                                </div>
+                                <div class="module">
+                                    <div class="flex_title">
+                                        <h2>Jack Bauer</h2>
+                                    </div>
+                                    <div class="flex_child">
+                                        <img class="blurred_speaker" src="images/photos/speakers/JoaoBarradas.jpg"/>
+                                    </div>
+                                </div>
+                                <div class="module">
+                                    <div class="flex_title">
+                                        <h2>Ted Mosby</h2>
+                                    </div>
+                                    <div class="flex_child">
+                                        <img class="blurred_speaker" src="images/photos/speakers/take_one.jpg"/>
+                                    </div>
+                                </div>
+                                <div class="module">
+                                    <div class="flex_title">
+                                        <h2>Dolores</h2>
+                                    </div>
+                                    <div class="flex_child">
+                                        <img class="blurred_speaker" src="images/photos/speakers/test-speaker1.jpeg"/>
+                                    </div>
+                                </div>
+                                <div class="module">
+                                    <div class="flex_title">
+                                        <h2>Rust Cohle</h2>
+                                    </div>
+                                    <div class="flex_child">
+                                        <img class="blurred_speaker" src="images/photos/speakers/test-speaker2.jpeg"/>
+                                    </div>
+                                </div>
+                                <div class="module">
+                                    <div class="flex_title">
+                                        <h2>Walter White</h2>
+                                    </div>
+                                    <div class="flex_child">
+                                        <img class="blurred_speaker" src="images/photos/speakers/test-speaker3.jpg"/>
+                                    </div>
+                                </div>
+                                <div class="module">
+                                    <div class="flex_title">
+                                        <h2>Seth Cohen</h2>
+                                    </div>
+                                    <div class="flex_child">
+                                        <img class="blurred_speaker" src="images/photos/speakers/test-speaker4.jpg"/>
+                                    </div>
+                                </div>
+                                <div class="module">
+                                    <div class="flex_title">
+                                        <h2>Jamie and Cersei Lannister</h2>
+                                    </div>
+                                    <div class="flex_child">
+                                        <img class="blurred_speaker" src="images/photos/speakers/test-speaker5.jpg"/>
+                                    </div>
+                                </div>
+                                
                             </div>
 						</div>
 						<!-- section end -->
@@ -1218,8 +1293,7 @@
             allMods.each(function(i, el) {
             var el = $(el);
                 if (el.visible(true)) {
-                    el.addClass("come-in");
-                    el.addClass("come-sideways");  
+                    el.addClass("come-in"); 
                 } 
             });
             allSpeakers.each(function(i, el) {
