Item title & subtitle (newsfeed + past editions)

--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@
                         <div class="list_bg"></div>
                         <div class="list_header">
                             <span class="list_title">News Feed</span>
+							<span class="list_subtitle">Read the stories that are most relevant to us.</span>
 							<!-- top photos -->
 							<div class="list_photo" data-image="images/photos/take_one.jpg">
 								<img class="blur" src="images/_placeholder2x.png"/> 
@@ -740,7 +741,7 @@
                         <div class="list_bg"></div>
                         <div class="list_header">
                             <span class="list_title">Past editions</span>
-                            <!--<span class="list_cta">Learn from the past, focus on the future!</span>-->
+							<span class="list_subtitle">Learn from the past, focus on the future.</span>
 							<div class="list_photo" data-image="images/photos/CarlosArturoTorres.jpg">
 								<img class="blur" src="images/_placeholder2x.png"/> 
 							</div>
