some more changes

--- a/index.html
+++ b/index.html
@@ -475,12 +475,8 @@
                                         <figure>
                                             <img class="blurred_speaker" src="images/photos/speakers/Bordalo-II.png" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
-                                            <figcaption>
-                                                <div class="container">
-                                                    <section>
-                                                        <button>View</button>
-                                                    </section>
-                                                </div>
+                                            <figcaption>   
+                                                <button onclick="openNav()">View</button>
                                                 <p>"Não é reciclagem, é uma crítica ao consumismo."</p>
                                             </figcaption>
                                         </figure>
@@ -497,7 +493,7 @@
                                             <img class="blurred_speaker" src="images/photos/speakers/daniela.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
                                             <figcaption>
-                                                <button>View</button>
+                                                <button onclick="openNav()">View</button>
                                                 <p>"Um povo que não tem cultura, que não tem identidade, desaparece."</p>
                                             </figcaption>
                                         </figure>
@@ -514,7 +510,7 @@
                                             <img class="blurred_speaker" src="images/photos/speakers/jeremias.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
                                             <figcaption>
-                                                <button>View</button>
+                                                <button onclick="openNav()">View</button>
                                                 <p>"Nós acreditamos que a prova não prova nada.".</p>
                                             </figcaption>
                                         </figure>
@@ -531,7 +527,7 @@
                                             <img class="blurred_speaker" src="images/photos/speakers/pachet.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
                                             <figcaption>
-                                                <button>View</button>
+                                                <button onclick="openNav()">View</button>
                                                 <p style="padding-top:80%;">"My goal is to create a generation of authoring tools able to boost individual creativity."</p>
                                             </figcaption>
                                         </figure>
@@ -548,7 +544,7 @@
                                             <img class="blurred_speaker" src="images/photos/speakers/couvaneiro.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
                                             <figcaption>
-                                                <button>View</button>
+                                                <button onclick="openNav()">View</button>
                                                 <!--<p>Soko radicchio bunya nuts gram dulse.</p>-->
                                             </figcaption>
                                         </figure>
@@ -565,7 +561,7 @@
                                             <img class="blurred_speaker" src="images/photos/speakers/joe.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
                                             <figcaption>
-                                                <button>View</button>
+                                                <button onclick="openNav()">View</button>
                                                 <!--<p>Soko radicchio bunya nuts gram dulse.</p>-->
                                             </figcaption>
                                         </figure>
@@ -582,7 +578,7 @@
                                             <img class="blurred_speaker" src="images/photos/speakers/coconuts.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
                                             <figcaption>
-                                                <button>View</button>
+                                                <button onclick="openNav()">View</button>
                                                 <!-- <p>Soko radicchio bunya nuts gram dulse.</p>-->
                                             </figcaption>
                                         </figure>
@@ -599,7 +595,7 @@
                                             <img class="blurred_speaker" src="images/photos/speakers/isaac.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
                                             <figcaption>
-                                                <button>View</button>
+                                                <button onclick="openNav()">View</button>
                                                 <!--<p>Soko radicchio bunya nuts gram dulse.</p>-->
                                             </figcaption>
                                         </figure>
@@ -616,7 +612,7 @@
                                             <img class="blurred_speaker" src="images/photos/speakers/susana.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
                                             <figcaption>
-                                                <button>View</button>
+                                                <button onclick="openNav()">View</button>
                                                 <!--<p>Soko radicchio bunya nuts gram dulse.</p>-->
                                             </figcaption>
                                         </figure>
