--- a/index.html
+++ b/index.html
@@ -467,16 +467,17 @@
 						<div class="item_section_speakers" id="item_section_speakers">
                             <div class="flex_container">
                               <div class="module">
-                                    <div class="flex_title">
+                                    <!--<div class="flex_title">
                                         <h2>Bordalo II</h2>
-                                    </div>
+                                    </div> -->
                                     <div id="flex_child" class="flex_child"> 
-                                        <a data-path-hover="M 0,218 180,160 180,320 0,320 z">   
+                                        <a data-path-hover="M 0,140 180,198 180,320 0,320 z">   
                                         <figure>
                                             <img class="blurred_speaker" src="images/photos/speakers/Bordalo-II.png" />
-                                            <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
-                                            <figcaption>   
+                                            <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,280 L 180,280 L 180,320 L0,320 z"/></svg>
+                                            <figcaption>
                                                 <button onclick="openNav()">View</button>
+                                                <h2>Bordalo II</h2>
                                                 <p>"Não é reciclagem, é uma crítica ao consumismo."</p>
                                             </figcaption>
                                         </figure>
@@ -488,7 +489,7 @@
                                         <h2>Daniela Ribeiro</h2>
                                     </div>
                                     <div id="flex_child" class="flex_child"> 
-                                        <a data-path-hover="M 0,218 180,160 180,320 0,320 z">   
+                                        <a data-path-hover="M 0,160 180,218 180,320 0,320 z">   
                                         <figure>
                                             <img class="blurred_speaker" src="images/photos/speakers/daniela.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
@@ -505,7 +506,7 @@
                                         <h2>Filipe Jeremias</h2>
                                     </div>
                                     <div id="flex_child" class="flex_child"> 
-                                        <a data-path-hover="M 0,218 180,160 180,320 0,320 z">   
+                                        <a data-path-hover="M 0,160 180,218 180,320 0,320 z">   
                                         <figure>
                                             <img class="blurred_speaker" src="images/photos/speakers/jeremias.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
@@ -522,7 +523,7 @@
                                         <h2>François Pachet</h2>
                                     </div>
                                     <div id="flex_child" class="flex_child"> 
-                                        <a data-path-hover="M 0,218 180,160 180,320 0,320 z">   
+                                        <a data-path-hover="M 0,160 180,218 180,320 0,320 z">   
                                         <figure>
                                             <img class="blurred_speaker" src="images/photos/speakers/pachet.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
@@ -539,7 +540,7 @@
                                         <h2>João Couvaneiro</h2>
                                     </div>
                                     <div id="flex_child" class="flex_child"> 
-                                        <a data-path-hover="M 0,218 180,160 180,320 0,320 z">   
+                                        <a data-path-hover="M 0,160 180,218 180,320 0,320 z">   
                                         <figure>
                                             <img class="blurred_speaker" src="images/photos/speakers/couvaneiro.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
@@ -556,7 +557,7 @@
                                         <h2>Joe Paton</h2>
                                     </div>
                                     <div id="flex_child" class="flex_child"> 
-                                        <a data-path-hover="M 0,218 180,160 180,320 0,320 z">   
+                                        <a data-path-hover="M 0,160 180,218 180,320 0,320 z">   
                                         <figure>
                                             <img class="blurred_speaker" src="images/photos/speakers/joe.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
@@ -573,7 +574,7 @@
                                         <h2>Les Crazy Coconuts</h2>
                                     </div>
                                     <div id="flex_child" class="flex_child"> 
-                                        <a data-path-hover="M 0,218 180,160 180,320 0,320 z">   
+                                        <a data-path-hover="M 0,160 180,218 180,320 0,320 z">   
                                         <figure>
                                             <img class="blurred_speaker" src="images/photos/speakers/coconuts.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
@@ -590,7 +591,7 @@
                                         <h2>Mistah Isaac</h2>
                                     </div>
                                     <div id="flex_child" class="flex_child"> 
-                                        <a data-path-hover="M 0,218 180,160 180,320 0,320 z">   
+                                        <a data-path-hover="M 0,160 180,218 180,320 0,320 z">   
                                         <figure>
                                             <img class="blurred_speaker" src="images/photos/speakers/isaac.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
@@ -607,7 +608,7 @@
                                         <h2>Susana Lima</h2>
                                     </div>
                                     <div id="flex_child" class="flex_child"> 
-                                        <a data-path-hover="M 0,218 180,160 180,320 0,320 z">   
+                                        <a data-path-hover="M 0,160 180,218 180,320 0,320 z">   
                                         <figure>
                                             <img class="blurred_speaker" src="images/photos/speakers/susana.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
@@ -624,7 +625,7 @@
                                         <h2>Tomás Mello Breyner</h2>
                                     </div>
                                     <div id="flex_child" class="flex_child"> 
-                                        <a data-path-hover="M 0,218 180,160 180,320 0,320 z">   
+                                        <a data-path-hover="M 0,160 180,218 180,320 0,320 z">   
                                         <figure>
                                             <img class="blurred_speaker" src="images/photos/speakers/breyner.jpg" />
                                             <svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,310 L 180,310 L 180,320 L0,320 z"/></svg>
