--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                         <div class="list_bg"></div>
                         <div class="list_header">
                             <span class="list_title">News Feed</span>
-							<span class="list_subtitle">Read the stories that are most relevant to us.</span>
+							<span class="list_subtitle">Read the stories most relevant to us.</span>
 							<!-- top photos -->
 							<div class="list_photo" data-image="images/photos/take_one.jpg">
 								<img class="blur" src="images/_placeholder2x.png"/> 
